Fix styling and alignment in My Investment

--- a/src/scss/_invest_embedded.scss
+++ b/src/scss/_invest_embedded.scss
@@ -50,8 +50,9 @@
 
     .chartBlock {
         display: flex;
+        align-items: center;
         margin-bottom: 16px;
-        gap: 40px;
+        gap: 12px;
 
         .numbers {
             width: 60px;
